--- a/ak1/template/vacency/districts.html
+++ b/ak1/template/vacency/districts.html
@@ -1,3 +1,7 @@
+ {% extends "./base.html" %}
+{% block content %}
+{% load static %}
+
 <head>
 <link href="../static/css.css" rel="stylesheet" type="text/css">
 </head>
