--- a/ak1/template/vacency/districts.html
+++ b/ak1/template/vacency/districts.html
@@ -16,7 +16,7 @@
                 <h2>ANANTAPUR</h2>
 
               </div>
-              <a class="card-link" href="/anantapur" ></a>
+              <a class="card-link" href="/ananthapur"></a>
             </div>
          </div>
 
