--- a/ak1/template/index.html
+++ b/ak1/template/index.html
@@ -1,3 +1,6 @@
+ {% extends "./base.html" %}
+{% block content %}
+{% load static %}
 
 
 <!DOCTYPE html>
@@ -237,7 +240,7 @@ Life at the quarantine blocks was grim so I decided it was time to loosen up a b
      <div class="grid-col-3">
     <div class="profile-card-2"><img src="https://images.unsplash.com/photo-1593173291368-cc504a76de1d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8YW5kaHJhJTIwcHJhZGVzaHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=60" class="img img-responsive">
 
-        <div class="profile-username"><p class="post-title">Andhra</p>
+        <div class="profile-username" href = "../vacency/districts"><p class="post-title">Andhra</p>
 
 
     </div>
